2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpratioentry.c (gimp_ratio_entry_set_fraction):
	emit property change notifications.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpenumwidgets.c
	(gimp_enum_stock_box_new_with_range): use GTK_RELIEF_NONE for the
	buttons.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/widgets-enums.c
	* libgimpwidgets/gimpwidgetsenums.[ch]: moved enum GimpAspectType
	to libgimpwidgets.

	* libgimpwidgets/gimpratioentry.[ch]: added property "aspect" with
	getters and setters.

	* libgimpwidgets/gimpwidgets.def: updated.

2007-02-08  Michael Natterer  <mitch@gimp.org>

	Unbreak rectangle select tool undo handling a bit:

	* app/tools/gimprectangleselecttool.c (gimp_rect_select_tool_select):
	add boolean return value indicating if something was actually selected.

	(gimp_rect_select_tool_rectangle_changed): peek the newly pushed
	undo only if we selected something.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpratioentry.[ch]: added history and completion.
	This will need more work.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* README: eliminated another redundant article.

2007-02-07  Michael Natterer  <mitch@gimp.org>

	* app/tools/tools-enums.[ch]: remove enum GimpColorPickMode...

	* app/widgets/widgets-enums.[ch]: ...and add it here.

	* app/widgets/gimpgradienteditor.c: merge separate functions for
	picking FG and BG colors and update the new color area from the
	merged function.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c
	* app/widgets/gimpgrideditor.c: slightly increased the height of
	color buttons.

2007-02-07  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.[ch]: applied patch from Joao
	S. O. Bueno Calligaris which adds a preview for the color the
	cursor is currently hovering and reduces excess precision when
	displaying color components and gradient positions (bug #400907).
