@@ -1,5 +1,11 @@
 2007-02-08  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimprectangleoptions.c
+	* app/widgets/gimppropwidgets.[ch]: cleaned out some cruft. Still
+	work in progress.
+
+2007-02-08  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpratioentry.c (gimp_ratio_entry_set_fraction):
 	emit property change notifications.
 
